--- a/pages/offline.html
+++ b/pages/offline.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <title>PROYECTO</title>
-        <link rel="stylesheet" href="css/CSS.css">
+        <link rel="stylesheet" href="../css/CSS.css">
             <meta charset="utf-8">
             <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5aa74222bd1bfb04"></script>
-            <link rel="manifest" href="manifest.json">
+            <link rel="manifest" href="../manifest.json">
 	<!--ANDROID-->
 	        <meta name="theme-color" content="#0a90c5">
     </head>
